--- a/src/assets/style/main-style.scss
+++ b/src/assets/style/main-style.scss
@@ -1,2 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+.ms-container{
+    width: 1100px;
+    margin: 0 auto;
+}
+
+a{
+    text-decoration: none;
+}
