--- a/src/assets/style/main-style.scss
+++ b/src/assets/style/main-style.scss
@@ -1,6 +1,16 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.ms-container{
+    width: 1100px;
+    margin: 0 auto;
+}
+
 a{
     text-decoration: none;
+
 }
