--- a/src/assets/style/main-style.scss
+++ b/src/assets/style/main-style.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import './variables';
 
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -13,4 +14,18 @@ body{
 a{
     text-decoration: none;
 
+}
+
+.static-button{
+    background-color: $brandColorTextSecondary;
+    border: 1px solid $brandColorTextSecondary;
+}
+
+.hover-button{
+    background-color: $brandColorTextPrimary;
+    border: 1px solid $brandColorTextPrimary;
+}
+
+.card-font-size{
+    font-size: .8rem;
 }
