Aggiornamento (Main: section-start-learning (senza hover) )

--- a/src/assets/style/main-style.scss
+++ b/src/assets/style/main-style.scss
@@ -29,3 +29,11 @@ a{
 .card-font-size{
     font-size: .8rem;
 }
+
+.hover-btn-start-now{
+    color: $brandColorTextSecondary;
+}
+
+.static-btn-start-now{
+    color: $brandColorContentText;
+}
